--- a/deployment-hello-world-service.yaml
+++ b/deployment-hello-world-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: gcr.io/google-samples/hello-app:1.0
+        image: civo/docker-hello-world:latest
         env:
         - name: SV_EXTERNAL_SERVICE_HOST_NAME
           value: "server1.acme.org"
